--- a/experiment1/index.html
+++ b/experiment1/index.html
@@ -32,35 +32,39 @@
 	<main id="content">
 		<section>
 
-			<h1>Experiment X - Subject/Topic</h1>
+			<h1>Experiment 1 - Hello Glitch/Generator</h1>
 
 			<div class="minor-section">
-				<div id="canvas-container">
-					<!-- canvas will be added here -->
-				</div>
-                <div class="fullscreen-box">
-                    <button id="fullscreen">Fullscreen</button>
-                </div>
+			<div class="glitch-embed-wrap" style="height: 420px; width: 100%;">
+			<iframe
+				src="https://glitch.com/embed/#!/embed/male-oc-generator?path=script.js&previewSize=100&sidebarCollapsed=true"
+				title="male-oc-generator on Glitch"
+				allow="geolocation; microphone; camera; midi; encrypted-media; xr-spatial-tracking; fullscreen"
+				allowFullScreen
+				style="height: 100%; width: 100%; border: 0;">
+			</iframe>
+			</div>
+        
 			</div>
 
 			<div class="minor-section">
 				<h2>Description</h2>
-				<p>What are you trying to acomplish with this experiment?</p>
+				<p>This generator helps pick traits and features for artists in order to create a male original character.</p>
 			</div>
 
 			<div class="minor-section">
 				<h2>Technical</h2>
-				<p>Describe in detail what you did technically and how it works?</p>
+				<p>The generator uses lists of filler words pertaining to facial features, hairstyles, and personalities. The function replacer() is used by generate() to randomly select a word from the many lists of filler words.  A template is formed containing slotPatterns which is then used by generate() in order to replace the slotPatterns with a word.</p>
 			</div>
 
 			<div class="minor-section">
 				<h2>Reflection</h2>
-				<p>Each person that worked on the code should reflect on the process, the difficulties, and the successes of the experiment.</p>
+				<p>This experiment was a success at generating unique male character designs. The process was not too difficult or too easy with only a few issues such as editing the look of the generator inside index.html.</p>
 			</div>
 
 		</section>
 		<nav id="links" class="minor-section">
-			<!-- Put link back to homepage here. -->
+			<https://dexhoang.github.io/cmpm147/>
             <ul>
                 <li><a href="../index.html">Home</a></li>
             </ul>
