--- a/experiment1/index.html
+++ b/experiment1/index.html
@@ -35,18 +35,31 @@
 			<h1>Experiment 1 - Hello Glitch/Generator</h1>
 
 			<div class="minor-section">
-			<div class="glitch-embed-wrap" style="height: 420px; width: 100%;">
-			<iframe
-				src="https://glitch.com/embed/#!/embed/male-oc-generator?path=script.js&previewSize=100&sidebarCollapsed=true"
-				title="male-oc-generator on Glitch"
-				allow="geolocation; microphone; camera; midi; encrypted-media; xr-spatial-tracking; fullscreen"
-				allowFullScreen
-				style="height: 100%; width: 100%; border: 0;">
-			</iframe>
-			</div>
-        
-			</div>
-
+					<html lang="en">
+						<head>
+						<title>Male OC Creator!</title>
+							<meta charset="utf-8" />
+							<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+							<meta name="viewport" content="width=device-width, initial-scale=1" />
+							<script src="/script.js" defer></script>
+						</head>
+						<body>
+							<button id="clicker">
+							Create Your Character!
+							</button>
+							<div
+							style="font-family: monaco; font-size: 15px; color: #8B4513; border: thick dashed #CD853F; padding: 1em; margin: 1em; box-shadow: 6px 6px 10px #DCDCDC; background: #FFF8DC; text-align: center;"
+							id="box"
+							></div>
+						</body>
+						</html>
+						</div>
+						
+					</div>
+					<div class="fullscreen-box">
+						<button id="fullscreen">Fullscreen</button>
+					</div>
+				</div>
 			<div class="minor-section">
 				<h2>Description</h2>
 				<p>This generator helps pick traits and features for artists in order to create a male original character.</p>
@@ -54,12 +67,12 @@
 
 			<div class="minor-section">
 				<h2>Technical</h2>
-				<p>The generator uses lists of filler words pertaining to facial features, hairstyles, and personalities. The function replacer() is used by generate() to randomly select a word from the many lists of filler words.  A template is formed containing slotPatterns which is then used by generate() in order to replace the slotPatterns with a word.</p>
+				<p>The generator uses lists of filler words pertaining to facial features, hairstyles, and personalities. The function replacer() is used by generate() to randomly select a word from the many lists of filler words.  A template is formed containing slotPatterns which is then used by generate() in order to replace the slotPatterns with a word via replacer().</p>
 			</div>
 
 			<div class="minor-section">
 				<h2>Reflection</h2>
-				<p>This experiment was a success at generating unique male character designs. The process was not too difficult or too easy with only a few issues such as editing the look of the generator inside index.html.</p>
+				<p>This experiment was a success at generating unique male character designs. The process was not too difficult or too easy with only a few issues such as editing the look of the generator inside index.html or understanding how to integrate the generator into my portfolio.</p>
 			</div>
 
 		</section>
