--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<div class="minor-section">
 					<!-- Note that all filenames use lowercase and no spaces -->
                     <div class="image-wrapper">
-                        <img class="cat-photo" src="./img/cute-grey-kitten.jpg">
+                        <img class="cat-photo" src="./img/blushing-dog.jpg">
                     </div>
 					<h2>About Me</h2>
 					<p>I game. I draw. I code.</p>
