--- a/experiment4a/index.html
+++ b/experiment4a/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- This title is used for tabs and bookmarks -->
-	<title>Experiment 4 - Infinite Swamp</title>
+	<title>Experiment 4 - Infinite Wetland</title>
 
 	<!-- Use UTF character set, a good idea with any webpage -->
 	<meta charset="UTF-8" />
@@ -66,7 +66,7 @@
 	<main id="content">
 		<section>
 
-			<h1>Experiment 4 - Infinite Swamp</h1>
+			<h1>Experiment 4 - Infinite Wetland</h1>
 
 			<div class="minor-section">
 				<div id="canvas-container">
