--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <li><a href="./experiment1/index.html">Experiment 1</a></li>
                     <li><a href="./experiment2/index.html">Experiment 2</a></li>
                     <li><a href="./experiment3/index.html">Experiment 3</a></li>
-					<li><a href="./experiment4a/index.html">Experiment 4 - Infinite Swamp</a></li>
+					<li><a href="./experiment4a/index.html">Experiment 4 - Infinite Wetland</a></li>
 					<li><a href="./experiment4b/index.html">Experiment 4 - Infinite Eyeballs</a></li>
                 </ul>
             </div>
