added exp4-c, style changes

--- a/experiment4b/index.html
+++ b/experiment4b/index.html
@@ -85,12 +85,12 @@
 
 			<div class="minor-section">
 				<h2>Description</h2>
-				<p>This project creates an infinite terrain overtaken by eyeballs that watch the user's movement.</p>
+				<p>This project creates an infinite terrain overtaken by eyeballs that watch the user's movement. This is what nightmares are made of.</p>
 			</div>
 
 			<div class="minor-section">
 				<h2>Technical</h2>
-				<p>The program uses procedural generation algorithms combined with unique hash values created by the user's world key in order to generate different terrain patterns and eyeball placements. Using trigonometry functions such as atan2(), sin(), and cos() as well as other variable like mouseX and mouseY, I found the angle that will determine where the user's mouse will be. Then by using that angle I was able to move the pupil in respect to the user's mouse position. I also used the hash function provided by the instructor to determine where the pre-existing eyeballs will be placed.</p>
+				<p>The program uses procedural generation algorithms combined with unique hash values created by the user's world key in order to generate different terrain patterns and eyeball placements. Using trigonometry functions such as atan2(), sin(), and cos() as well as other variables like mouseX and mouseY, I found the angle that will determine where the user's mouse will be. Then by using that angle I was able to move the pupil in respect to the user's mouse position. I also used the hash function provided by the instructor to determine where the pre-existing eyeballs will be placed.</p>
 			</div>
 
 			<div class="minor-section">
@@ -100,9 +100,9 @@
 
 			<div class="minor-section">
 				<h2>Artist Statement</h2>
-				<p>Infinity: I used the infinite extent of my world to create a haunting experience for the user that's never-ending.<br><br>
+				<p>Infinity: I used the infinite extent of my world to create a haunting world taken over by monstrous eyeballs.<br><br>
 
-					Variation in Space: As the audience browses my world, they'll see eyeballs scattered around a purple and black terrain.<br><br>
+					Variation in Space: As the audience browses my world, they'll come across numerous eyeballs scattered around a purple and black terrain.<br><br>
 					
 					Variations in Key: Different worlds will generate eyeballs at different locations as well as change the pattern of the terrain.<br><br>
 					
