--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- This title is used for tabs and bookmarks -->
-	<title>Portfolio of My Name</title>
+	<title>Portfolio of Dexter Hoang</title>
 
 	<!-- Use UTF character set, a good idea with any webpage -->
   <meta charset="UTF-8" />
@@ -36,6 +36,7 @@
                     <li><a href="./experiment3/index.html">Experiment 3</a></li>
 					<li><a href="./experiment4a/index.html">Experiment 4 - Infinite Wetland</a></li>
 					<li><a href="./experiment4b/index.html">Experiment 4 - Infinite Eyeballs</a></li>
+					<li><a href="./experiment4c/index.html">Experiment 4 - Infinite Groceries</a></li>
                 </ul>
             </div>
 
