--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 					<li><a href="./experiment4a/index.html">Experiment 4 - Infinite Wetland</a></li>
 					<li><a href="./experiment4b/index.html">Experiment 4 - Infinite Eyeballs</a></li>
 					<li><a href="./experiment4c/index.html">Experiment 4 - Infinite Groceries</a></li>
+					<li><a href="./experiment5/index.html">Experiment 5 - Evolutionary Impressions</a></li>
                 </ul>
             </div>
 
